[EXOD-028] Ensure navbar background works on mobile

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -34,8 +34,29 @@
   height: 100%;
   overflow: hidden;
   border-radius: 0 !important;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  background-color: initial !important;
+}
+
+.MuiPaper-root {
+  backdrop-filter: none !important;
+  -webkit-backdrop-filter: none !important;
+  z-index: 20;
+}
+
+.MuiDrawer-paper::before {
+  background-image: linear-gradient(0deg, rgba(31, 31, 31, 1) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 100%),
+    url("../../assets/images/exod-sidebar.jpg");
+  background-repeat: no-repeat;
+  background-color: #131313;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  opacity: 0.75;
+  content: "";
 }
 
 .dapp-sidebar-inner {
